--- a/expanding.html
+++ b/expanding.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <div class ="return">
+            <btn>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+            </btn>
+        </div>
         <div class = "container">
             <div class = "panel active" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Single_lavender_flower02.jpg/1200px-Single_lavender_flower02.jpg')">
                 <h3>
