--- a/progress.html
+++ b/progress.html
@@ -19,10 +19,11 @@
             <button class= "btn" id = "prev" disabled>Prev</button>
             <button class= "btn" id= "next">Next</button>
         </div>
-        <div class '></div>
-        <btn>
-            <a href="index.html"><i class="fa-solid fa-house"></i></a>
-        </btn>
+        <div class="homeholder">
+            <btn>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+            </btn>
+        </div>
         <script src="js/progress.js"></script>
     </body>
 </html>
