--- a/search.html
+++ b/search.html
@@ -14,7 +14,11 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
         </div>
-
+        <div class ="return">
+            <btn>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+            </btn>
+        </div>
         <script src="https://kit.fontawesome.com/baedc4006d.js" crossorigin="anonymous"></script>
         <script src="js/search.js"></script>
     </body>
