Fri, Mar 17, 2023, 5:06 PM +00:00

--- a/sounds.html
+++ b/sounds.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <title>
-            My page
+            Sounds
         </title>
         <link rel="stylesheet" href="css/sounds.css">
     </head>
