Fri, Mar 17, 2023, 5:09 PM +00:00

--- a/sounds.html
+++ b/sounds.html
@@ -15,5 +15,9 @@
         <audio id="victory" src="sounds/victory.mp3"></audio>
         <audio id="wrong" src="sounds/wrong.mp3"></audio>
         <script src="js/sounds.js"></script>
+
+        <div id = "buttons">
+
+        </div>
     </body>
 </html>
