--- a/jokes.html
+++ b/jokes.html
@@ -8,12 +8,16 @@
     </heading>
 
     <body>
-        <div class="bg"></div>
-        <div class ="loading-text">0%</div>
-        <div class ="return">
-            <btn>
-                <a href="index.html"><i class="fa-solid fa-house"></i></a>
-            </btn>
+        <div class="container">
+            <h3>
+                Don't Laugh Challenge!
+            </h3>
+            <div id="joke" class="joke">
+                JOKE GOES HERE
+            </div>
+            <button id="jokeBtn" class="btn">
+                Get Another Joke
+            </button>
         </div>
         <script src="js/jokes.js"></script>
         <script src="https://kit.fontawesome.com/baedc4006d.js" crossorigin="anonymous"></script>
