--- a/counter.html
+++ b/counter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <heading>
         <title>
             Counter
@@ -7,26 +7,23 @@
         <link rel="stylesheet" href="css/counter.css">
     </heading>
 
+
     <body>
-        <div class ="counter-container">
-            <i class="fab fa-twitter fa 3x"></i>
-            <div class="counter" data-target="12000">12000</div>
-            <span>Twitter Followers</span>
+        <div class="counter-container">
+            <i class ="fab fa-twitter fa-3x"></i>
+            <div class="counter" data-target="12000"></div>
+            <span >Twitter Followers</span>
         </div>
-
-        <div class ="counter-container">
-            <i class="fab fa-youtube fa 3x"></i>
-            <div class="counter" data-target="5000">5000</div>
-            <span>Youtube Subscribers</span>
+        <div class="counter-container">
+            <i class ="fab fa-youtube fa-3x"></i>
+            <div class="counter" data-target="5000"></div>
+            <span >Youtube Subscribers</span>
         </div>
-
-        <div class ="counter-container">
-            <i class="fab fa-facebook fa 3x"></i>
-            <div class="counter" data-target="7500">7500</div>
-            <span>Facebook Fans</span>
+        <div class="counter-container">
+            <i class ="fab fa-facebook fa-3x"></i>
+            <div class="counter" data-target="7500"></div>
+            <span >Facebook Fans</span>
         </div>
-
-        <script src="https://kit.fontawesome.com/baedc4006d.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/324341fbe5.js" crossorigin="anonymous"></script>
         <script src="js/counter.js"></script>
     </body>
-</html>
