Wed, Mar 22, 2023, 4:18 PM +00:00

--- a/colorboard.html
+++ b/colorboard.html
@@ -8,6 +8,58 @@
     </heading>
 
     <body>
+        <div class = "container" id ="container">
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+            <div class = "sqaure"></div>
+        </div>
 
         <script src="js/colorboard.js"></script>
     </body>
