Wed, Mar 22, 2023, 4:32 PM +00:00

--- a/colorboard.html
+++ b/colorboard.html
@@ -1,66 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <heading>
-        <title>
-            Colorboard
-        </title>
+        <title>Colorboard</title>
         <link rel="stylesheet" href="css/colorboard.css">
     </heading>
-
     <body>
-        <div class = "container" id ="container">
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-            <div class = "sqaure"></div>
-        </div>
-
+        <div class = "container" id ="container"></div>
         <script src="js/colorboard.js"></script>
     </body>
 </html>
