--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                         <a href="loading.html">Loading</a>
                     </h3>
                 </div>
-                <div class = "panel" style="background-image: url('https://www.modernquiltstudio.com/modt/uploads/2020/07/03.jpg')">
+                <div class = "panel" style="background-image: url('https://htmlcolorcodes.com/assets/images/colors/orange-color-solid-background-1920x1080.png')">
                     <h3>
                         <a href="navigation.html">Navigation</a>
                     </h3>
                 </div>
-                <div class = "panel" style="background-image: url('https://www.bhphotovideo.com/images/images500x500/Rosco_102301212124_E_Colour_121_Soft_Green_163059.jpg')">
+                <div class = "panel" style="background-image: url('https://www.modernquiltstudio.com/modt/uploads/2020/07/03.jpg')">
                     <h3>
                         <a href="progress.html">Progress</a>
                     </h3>
@@ -39,6 +39,31 @@
                 <div class = "panel" style="background-image: url('https://garden.spoonflower.com/c/11109378/p/f/m/2ejf8i-g4OGFg6uIwHkhwkpQFEgJ3I-01-8OPOgU_CJTqx2yrKND/Soft%20purple%2Fsolid%20color.jpg')">
                     <h3>
                         <a href="expanding.html">Expanding</a>
+                    </h3>
+                </div>
+                <div class = "panel" style="background-image: url('https://www.modernquiltstudio.com/modt/uploads/2020/07/03.jpg')">
+                    <h3>
+                        <a href="colorboard.html">Colorboard</a>
+                    </h3>
+                </div>
+                <div class = "panel" style="background-image: url('https://www.modernquiltstudio.com/modt/uploads/2020/07/03.jpg')">
+                    <h3>
+                        <a href="counter.html">Counter</a>
+                    </h3>
+                </div>
+                <div class = "panel" style="background-image: url('https://www.bhphotovideo.com/images/images500x500/Rosco_102301212124_E_Colour_121_Soft_Green_163059.jpg')">
+                    <h3>
+                        <a href="jokes.html">Jokes</a>
+                    </h3>
+                </div>
+                <div class = "panel" style="background-image: url('https://www.bhphotovideo.com/images/images500x500/Rosco_102300632124_E_Colour_063_Pale_Blue_163208.jpg')">
+                    <h3>
+                        <a href="sounds.html">Sounds</a>
+                    </h3>
+                </div>
+                <div class = "panel" style="background-image: url('https://garden.spoonflower.com/c/11109378/p/f/m/2ejf8i-g4OGFg6uIwHkhwkpQFEgJ3I-01-8OPOgU_CJTqx2yrKND/Soft%20purple%2Fsolid%20color.jpg')">
+                    <h3>
+                        <a href="typing.html">Typing</a>
                     </h3>
                 </div>
             </div>
