Wed, Apr 12, 2023, 4:51 PM +00:00

--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
                         <a href="colorboard.html">Colorboard</a>
                     </h3>
                 </div>
-                <div class = "panel" style="background-image: url('https://www.modernquiltstudio.com/modt/uploads/2020/07/03.jpg')">
+                <div class = "panel" style="background-image: url('https://garden.spoonflower.com/c/11109378/p/f/m/2ejf8i-g4OGFg6uIwHkhwkpQFEgJ3I-01-8OPOgU_CJTqx2yrKND/Soft%20purple%2Fsolid%20color.jpg')">
                     <h3>
                         <a href="counter.html">Counter</a>
                     </h3>
                 </div>
-                <div class = "panel" style="background-image: url('https://www.bhphotovideo.com/images/images500x500/Rosco_102301212124_E_Colour_121_Soft_Green_163059.jpg')">
+                <div class = "panel" style="background-image: url('https://htmlcolorcodes.com/assets/images/colors/violet-color-solid-background-1920x1080.png')">
                     <h3>
                         <a href="jokes.html">Jokes</a>
                     </h3>
                 </div>
-                <div class = "panel" style="background-image: url('https://www.bhphotovideo.com/images/images500x500/Rosco_102300632124_E_Colour_063_Pale_Blue_163208.jpg')">
+                <div class = "panel" style="background-image: url('https://cdn.shopify.com/s/files/1/1218/4290/products/Solid-127-Magenta_1400x.jpg?v=1464823083')">
                     <h3>
                         <a href="sounds.html">Sounds</a>
                     </h3>
                 </div>
-                <div class = "panel" style="background-image: url('https://garden.spoonflower.com/c/11109378/p/f/m/2ejf8i-g4OGFg6uIwHkhwkpQFEgJ3I-01-8OPOgU_CJTqx2yrKND/Soft%20purple%2Fsolid%20color.jpg')">
+                <div class = "panel" style="background-image: url('https://play-lh.googleusercontent.com/saVQ5NzWFgDk8ghuy-ncBn-4-VvZhhHEIP--Ti_8UqpUr6-7eTyc63x_Z_KwXhs4CiTU')">
                     <h3>
                         <a href="typing.html">Typing</a>
                     </h3>
